--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
           </div>
 
           <div class="col-md-2">
-            <h4>Company</h4>
+            <h4>Comunidades</h4>
             <ul class="navbar-nav">
               <li><a href="">Artistas</a></li>
               <li><a href="">Desenvolvedores</a></li>
@@ -210,7 +210,7 @@
           </div>
 
           <div class="col-md-2">
-            <h4>Company</h4>
+            <h4>Links uteis</h4>
             <ul class="navbar-nav">
               <li><a href="">Ajuda</a></li>
               <li><a href="">Presentes</a></li>
